Clean and optimize ECMA48Terminal with Java 21 features (#89)
* Initial plan

* Optimize ECMA48Terminal with Java 21 features: switch expressions, Set.of(), extract helpers

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Optimize ImageCache with LinkedHashMap LRU, improve code idioms and cache locality

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Address code review: add constants, improve comments for LRU cache

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Address review: revert loop order for ImageRGB column-major storage, add NumberFormatException handling, clarify size() call

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>