@@ -25,6 +25,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
@@ -463,49 +464,29 @@ public class ECMA48Terminal extends LogicalScreen
     private static int DEFAULT_FORECOLOR;
     private static int DEFAULT_BACKCOLOR;
 
+    /**
+     * LRU cache for rendered image strings.
+     * Uses LinkedHashMap with access-order for automatic LRU eviction.
+     */
     private class ImageCache {
 
         /**
          * Maximum size of the cache.
          */
-        private int maxSize = 100;
+        private final int maxSize;
 
         /**
-         * The entries stored in the cache.
+         * The entries stored in the cache using LinkedHashMap for LRU ordering.
+         * LinkedHashMap with accessOrder=true automatically moves accessed entries to the end,
+         * making the first entry always the least recently used.
          */
-        private HashMap<String, CacheEntry> cache = null;
+        private final java.util.LinkedHashMap<String, String> cache;
 
         /**
-         * CacheEntry is one entry in the cache.
+         * Approximate number of characters per hashCode in the cache key.
+         * Used for StringBuilder capacity estimation.
          */
-        private class CacheEntry {
-            /**
-             * The cache key.
-             */
-            public String key;
-
-            /**
-             * The cache data.
-             */
-            public String data;
-
-            /**
-             * The last time this entry was used.
-             */
-            public long millis = 0;
-
-            /**
-             * Public constructor.
-             *
-             * @param key  the cache entry key
-             * @param data the cache entry data
-             */
-            public CacheEntry(final String key, final String data) {
-                this.key = key;
-                this.data = data;
-                this.millis = System.currentTimeMillis();
-            }
-        }
+        private static final int CHARS_PER_HASHCODE = 10;
 
         /**
          * Public constructor.
@@ -514,7 +495,16 @@ public class ECMA48Terminal extends LogicalScreen
          */
         public ImageCache(final int maxSize) {
             this.maxSize = maxSize;
-            cache = new HashMap<String, CacheEntry>();
+            // Create LinkedHashMap with access-order (accessOrder=true) and automatic eviction.
+            // removeEldestEntry is called after insertion, so size() > maxSize means we just
+            // exceeded the limit and need to evict the eldest entry.
+            this.cache = new java.util.LinkedHashMap<>(maxSize + 1, 0.75f, true) {
+                @Override
+                protected boolean removeEldestEntry(java.util.Map.Entry<String, String> eldest) {
+                    // Use the LinkedHashMap's own size() method (not ImageCache.size())
+                    return this.size() > maxSize;
+                }
+            };
         }
 
         /**
@@ -524,11 +514,10 @@ public class ECMA48Terminal extends LogicalScreen
          * @return the key
          */
         private String makeKey(final ArrayList<Cell> cells) {
-            StringBuilder sb = new StringBuilder();
+            StringBuilder sb = new StringBuilder(cells.size() * CHARS_PER_HASHCODE);
             for (Cell cell : cells) {
                 sb.append(cell.hashCode());
             }
-            // System.err.println("key: " + sb.toString());
             return sb.toString();
         }
 
@@ -540,12 +529,7 @@ public class ECMA48Terminal extends LogicalScreen
          * list of cells is not in the cache
          */
         public synchronized String get(final ArrayList<Cell> cells) {
-            CacheEntry entry = cache.get(makeKey(cells));
-            if (entry == null) {
-                return null;
-            }
-            entry.millis = System.currentTimeMillis();
-            return entry.data;
+            return cache.get(makeKey(cells));
         }
 
         /**
@@ -554,44 +538,8 @@ public class ECMA48Terminal extends LogicalScreen
          * @param cells the list of cells that are the cache key
          * @param data  the image string representing these cells
          */
-        public synchronized void put(final ArrayList<Cell> cells,
-                                     final String data) {
-
-            String key = makeKey(cells);
-
-            // System.err.println("put() " + key + " size " + cache.size());
-
-            assert (!cache.containsKey(key));
-
-            assert (cache.size() <= maxSize);
-            if (cache.size() == maxSize) {
-                // Cache is at limit, evict oldest entry.
-                long oldestTime = Long.MAX_VALUE;
-                String keyToRemove = null;
-                for (CacheEntry entry : cache.values()) {
-                    if ((entry.millis < oldestTime) || (keyToRemove == null)) {
-                        keyToRemove = entry.key;
-                        oldestTime = entry.millis;
-                    }
-                }
-                /*
-                System.err.println("put() remove key = " + keyToRemove +
-                    " size " + cache.size());
-                 */
-                assert (keyToRemove != null);
-                cache.remove(keyToRemove);
-                /*
-                System.err.println("put() removed, size " + cache.size());
-                 */
-            }
-            assert (cache.size() <= maxSize);
-            CacheEntry entry = new CacheEntry(key, data);
-            assert (key.equals(entry.key));
-            cache.put(key, entry);
-            /*
-            System.err.println("put() added key " + key + " " +
-                " size " + cache.size());
-             */
+        public synchronized void put(final ArrayList<Cell> cells, final String data) {
+            cache.put(makeKey(cells), data);
         }
 
         /**
@@ -602,7 +550,6 @@ public class ECMA48Terminal extends LogicalScreen
         public synchronized int size() {
             return cache.size();
         }
-
     }
 
     // ------------------------------------------------------------------------
@@ -827,7 +774,7 @@ public class ECMA48Terminal extends LogicalScreen
 
         this.input = reader;
 
-        if (setRawMode == true) {
+        if (setRawMode) {
             sttyRaw();
         }
         this.setRawMode = setRawMode;
@@ -838,7 +785,7 @@ public class ECMA48Terminal extends LogicalScreen
             sessionInfo = (SessionInfo) input;
         }
         if (sessionInfo == null) {
-            if (setRawMode == true) {
+            if (setRawMode) {
                 // Reading right off the tty
                 sessionInfo = new TTYSessionInfo(terminal);
             } else {
@@ -1055,7 +1002,7 @@ public class ECMA48Terminal extends LogicalScreen
      */
     public boolean hasEvents() {
         synchronized (eventQueue) {
-            return (eventQueue.size() > 0);
+            return !eventQueue.isEmpty();
         }
     }
 
@@ -1066,7 +1013,7 @@ public class ECMA48Terminal extends LogicalScreen
      */
     public void getEvents(final List<TInputEvent> queue) {
         synchronized (eventQueue) {
-            if (eventQueue.size() > 0) {
+            if (!eventQueue.isEmpty()) {
                 synchronized (queue) {
                     queue.addAll(eventQueue);
                 }
@@ -1340,7 +1287,7 @@ public class ECMA48Terminal extends LogicalScreen
                             processChar(events, (char) ch);
                         }
                         getIdleEvents(events);
-                        if (events.size() > 0) {
+                        if (!events.isEmpty()) {
                             // Add to the queue for the backend thread to
                             // be able to obtain.
                             if (debugToStderr) {
@@ -1375,7 +1322,7 @@ public class ECMA48Terminal extends LogicalScreen
                         System.err.println("Looking for idle events");
                     }
                     getIdleEvents(events);
-                    if (events.size() > 0) {
+                    if (!events.isEmpty()) {
                         if (debugToStderr) {
                             System.err.printf("Checking eventQueue...");
                         }
@@ -2013,20 +1960,15 @@ public class ECMA48Terminal extends LogicalScreen
         }
 
         if (imageThreadCount > 1) {
-            List<String> threadedImages = new ArrayList<String>(imageResults.size());
+            List<String> threadedImages = new ArrayList<>(imageResults.size());
             // Collect all the encoded images.
-            while (imageResults.size() > 0) {
-                Future<String> image = imageResults.get(0);
+            while (!imageResults.isEmpty()) {
+                Future<String> image = imageResults.removeFirst();
                 try {
                     threadedImages.add(image.get());
-                } catch (InterruptedException e) {
+                } catch (InterruptedException | ExecutionException e) {
                     // SQUASH
-                    // e.printStackTrace();
-                } catch (ExecutionException e) {
-                    // SQUASH
-                    // e.printStackTrace();
                 }
-                imageResults.remove(0);
             }
             imageExecutor.shutdown();
 
@@ -2097,28 +2039,19 @@ public class ECMA48Terminal extends LogicalScreen
      * fnKey == ESC)
      */
     private TKeypressEvent controlChar(final char ch, final boolean alt) {
-        // System.err.printf("controlChar: %02x\n", ch);
-
-        switch (ch) {
-            case 0x0D:
-                // Carriage return --> ENTER
-                return new TKeypressEvent(backend, kbEnter, alt, false, false);
-            case 0x0A:
-                // Linefeed --> ENTER
-                return new TKeypressEvent(backend, kbEnter, alt, false, false);
-            case 0x1B:
-                // ESC
-                return new TKeypressEvent(backend, kbEsc, alt, false, false);
-            case '\t':
-                // TAB
-                return new TKeypressEvent(backend, kbTab, alt, false, false);
-            default:
+        return switch (ch) {
+            case 0x0D, 0x0A -> // Carriage return or Linefeed --> ENTER
+                new TKeypressEvent(backend, kbEnter, alt, false, false);
+            case 0x1B -> // ESC
+                new TKeypressEvent(backend, kbEsc, alt, false, false);
+            case '\t' -> // TAB
+                new TKeypressEvent(backend, kbTab, alt, false, false);
+            default ->
                 // Make all other control characters come back as the alphabetic
-                // character with the ctrl field set.  So SOH would be 'A' +
-                // ctrl.
-                return new TKeypressEvent(backend, false, 0, (char) (ch + 0x40),
+                // character with the ctrl field set.  So SOH would be 'A' + ctrl.
+                new TKeypressEvent(backend, false, 0, (char) (ch + 0x40),
                     alt, true, false);
-        }
+        };
     }
 
     /**
@@ -2134,27 +2067,18 @@ public class ECMA48Terminal extends LogicalScreen
      */
     private boolean handleArrowKey(final List<TInputEvent> events, final int ch,
                                    final boolean alt, final boolean ctrl, final boolean shift) {
-
-        switch (ch) {
-            case 'A':
-                // Up
-                events.add(new TKeypressEvent(backend, kbUp, alt, ctrl, shift));
-                return true;
-            case 'B':
-                // Down
-                events.add(new TKeypressEvent(backend, kbDown, alt, ctrl, shift));
-                return true;
-            case 'C':
-                // Right
-                events.add(new TKeypressEvent(backend, kbRight, alt, ctrl, shift));
-                return true;
-            case 'D':
-                // Left
-                events.add(new TKeypressEvent(backend, kbLeft, alt, ctrl, shift));
-                return true;
-            default:
-                return false;
+        TKeypressEvent event = switch (ch) {
+            case 'A' -> new TKeypressEvent(backend, kbUp, alt, ctrl, shift);
+            case 'B' -> new TKeypressEvent(backend, kbDown, alt, ctrl, shift);
+            case 'C' -> new TKeypressEvent(backend, kbRight, alt, ctrl, shift);
+            case 'D' -> new TKeypressEvent(backend, kbLeft, alt, ctrl, shift);
+            default -> null;
+        };
+        if (event != null) {
+            events.add(event);
+            return true;
         }
+        return false;
     }
 
     /**
@@ -2164,8 +2088,12 @@ public class ECMA48Terminal extends LogicalScreen
      */
     private TInputEvent csiFnKey() {
         int key = 0;
-        if (params.size() > 0) {
-            key = Integer.parseInt(params.get(0));
+        if (!params.isEmpty()) {
+            try {
+                key = Integer.parseInt(params.getFirst());
+            } catch (NumberFormatException e) {
+                return null; // Invalid parameter, ignore
+            }
         }
         boolean alt = false;
         boolean ctrl = false;
@@ -2178,70 +2106,61 @@ public class ECMA48Terminal extends LogicalScreen
             ctrl = csiIsCtrl(params.get(1));
         }
         if (params.size() > 2) {
-            otherKey = Integer.parseInt(params.get(2));
+            try {
+                otherKey = Integer.parseInt(params.get(2));
+            } catch (NumberFormatException e) {
+                return null; // Invalid parameter, ignore
+            }
         }
 
-        switch (key) {
-            case 1:
-                return new TKeypressEvent(backend, kbHome, alt, ctrl, shift);
-            case 2:
-                return new TKeypressEvent(backend, kbIns, alt, ctrl, shift);
-            case 3:
-                return new TKeypressEvent(backend, kbDel, alt, ctrl, shift);
-            case 4:
-                return new TKeypressEvent(backend, kbEnd, alt, ctrl, shift);
-            case 5:
-                return new TKeypressEvent(backend, kbPgUp, alt, ctrl, shift);
-            case 6:
-                return new TKeypressEvent(backend, kbPgDn, alt, ctrl, shift);
-            case 15:
-                return new TKeypressEvent(backend, kbF5, alt, ctrl, shift);
-            case 17:
-                return new TKeypressEvent(backend, kbF6, alt, ctrl, shift);
-            case 18:
-                return new TKeypressEvent(backend, kbF7, alt, ctrl, shift);
-            case 19:
-                return new TKeypressEvent(backend, kbF8, alt, ctrl, shift);
-            case 20:
-                return new TKeypressEvent(backend, kbF9, alt, ctrl, shift);
-            case 21:
-                return new TKeypressEvent(backend, kbF10, alt, ctrl, shift);
-            case 23:
-                return new TKeypressEvent(backend, kbF11, alt, ctrl, shift);
-            case 24:
-                return new TKeypressEvent(backend, kbF12, alt, ctrl, shift);
+        return switch (key) {
+            case 1 -> new TKeypressEvent(backend, kbHome, alt, ctrl, shift);
+            case 2 -> new TKeypressEvent(backend, kbIns, alt, ctrl, shift);
+            case 3 -> new TKeypressEvent(backend, kbDel, alt, ctrl, shift);
+            case 4 -> new TKeypressEvent(backend, kbEnd, alt, ctrl, shift);
+            case 5 -> new TKeypressEvent(backend, kbPgUp, alt, ctrl, shift);
+            case 6 -> new TKeypressEvent(backend, kbPgDn, alt, ctrl, shift);
+            case 15 -> new TKeypressEvent(backend, kbF5, alt, ctrl, shift);
+            case 17 -> new TKeypressEvent(backend, kbF6, alt, ctrl, shift);
+            case 18 -> new TKeypressEvent(backend, kbF7, alt, ctrl, shift);
+            case 19 -> new TKeypressEvent(backend, kbF8, alt, ctrl, shift);
+            case 20 -> new TKeypressEvent(backend, kbF9, alt, ctrl, shift);
+            case 21 -> new TKeypressEvent(backend, kbF10, alt, ctrl, shift);
+            case 23 -> new TKeypressEvent(backend, kbF11, alt, ctrl, shift);
+            case 24 -> new TKeypressEvent(backend, kbF12, alt, ctrl, shift);
+            case 27 -> handleModifyOtherKeys(otherKey, alt, ctrl, shift);
+            default -> null; // Unknown
+        };
+    }
 
-            case 27:
-                // modifyOtherKeys sequence
-                switch (otherKey) {
-                    case 8:
-                        return new TKeypressEvent(backend, kbBackspace, alt, ctrl, shift);
-                    case 9:
-                        return new TKeypressEvent(backend, kbTab, alt, ctrl, shift);
-                    case 13:
-                        return new TKeypressEvent(backend, kbEnter, alt, ctrl, shift);
-                    case 27:
-                        return new TKeypressEvent(backend, kbEsc, alt, ctrl, shift);
-                    default:
-                        if (otherKey < 32) {
-                            break;
-                        }
-                        if ((otherKey >= 'a') && (otherKey <= 'z') && ctrl) {
-                            // Turn Ctrl-lowercase into Ctrl-uppercase
-                            return new TKeypressEvent(backend, false, 0, (otherKey - 32),
-                                alt, ctrl, shift);
-                        }
-                        return new TKeypressEvent(backend, false, 0, otherKey,
-                            alt, ctrl, shift);
+    /**
+     * Handle the modifyOtherKeys sequence (CSI 27).
+     *
+     * @param otherKey the key code
+     * @param alt      true if alt was pressed
+     * @param ctrl     true if ctrl was pressed
+     * @param shift    true if shift was pressed
+     * @return the corresponding keypress event, or null if unsupported
+     */
+    private TInputEvent handleModifyOtherKeys(final int otherKey, final boolean alt,
+                                               final boolean ctrl, final boolean shift) {
+        return switch (otherKey) {
+            case 8 -> new TKeypressEvent(backend, kbBackspace, alt, ctrl, shift);
+            case 9 -> new TKeypressEvent(backend, kbTab, alt, ctrl, shift);
+            case 13 -> new TKeypressEvent(backend, kbEnter, alt, ctrl, shift);
+            case 27 -> new TKeypressEvent(backend, kbEsc, alt, ctrl, shift);
+            default -> {
+                if (otherKey < 32) {
+                    yield null;
                 }
-
-                // Unsupported other key
-                return null;
-
-            default:
-                // Unknown
-                return null;
-        }
+                if (otherKey >= 'a' && otherKey <= 'z' && ctrl) {
+                    // Turn Ctrl-lowercase into Ctrl-uppercase
+                    yield new TKeypressEvent(backend, false, 0, (otherKey - 32),
+                        alt, ctrl, shift);
+                }
+                yield new TKeypressEvent(backend, false, 0, otherKey, alt, ctrl, shift);
+            }
+        };
     }
 
     /**
@@ -2593,18 +2512,26 @@ public class ECMA48Terminal extends LogicalScreen
     }
 
     /**
+     * Set of CSI parameters indicating Shift key was pressed.
+     */
+    private static final Set<String> CSI_SHIFT_PARAMS = Set.of("2", "4", "6", "8");
+
+    /**
+     * Set of CSI parameters indicating Alt key was pressed.
+     */
+    private static final Set<String> CSI_ALT_PARAMS = Set.of("3", "4", "7", "8");
+
+    /**
+     * Set of CSI parameters indicating Ctrl key was pressed.
+     */
+    private static final Set<String> CSI_CTRL_PARAMS = Set.of("5", "6", "7", "8");
+
+    /**
      * Returns true if the CSI parameter for a keyboard command means that
      * shift was down.
      */
     private boolean csiIsShift(final String x) {
-        if ((x.equals("2"))
-            || (x.equals("4"))
-            || (x.equals("6"))
-            || (x.equals("8"))
-        ) {
-            return true;
-        }
-        return false;
+        return CSI_SHIFT_PARAMS.contains(x);
     }
 
     /**
@@ -2612,14 +2539,7 @@ public class ECMA48Terminal extends LogicalScreen
      * alt was down.
      */
     private boolean csiIsAlt(final String x) {
-        if ((x.equals("3"))
-            || (x.equals("4"))
-            || (x.equals("7"))
-            || (x.equals("8"))
-        ) {
-            return true;
-        }
-        return false;
+        return CSI_ALT_PARAMS.contains(x);
     }
 
     /**
@@ -2627,14 +2547,7 @@ public class ECMA48Terminal extends LogicalScreen
      * ctrl was down.
      */
     private boolean csiIsCtrl(final String x) {
-        if ((x.equals("5"))
-            || (x.equals("6"))
-            || (x.equals("7"))
-            || (x.equals("8"))
-        ) {
-            return true;
-        }
-        return false;
+        return CSI_CTRL_PARAMS.contains(x);
     }
 
     /**
@@ -2759,123 +2672,99 @@ public class ECMA48Terminal extends LogicalScreen
                     red, green, blue);
             }
             int rgbColor = red << 16 | green << 8 | blue;
-            switch (color) {
-                case 0:
-                    MYBLACK = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BLACK");
-                    }
-                    break;
-                case 1:
-                    MYRED = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set RED");
-                    }
-                    break;
-                case 2:
-                    MYGREEN = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set GREEN");
-                    }
-                    break;
-                case 3:
-                    MYYELLOW = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set YELLOW");
-                    }
-                    break;
-                case 4:
-                    MYBLUE = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BLUE");
-                    }
-                    break;
-                case 5:
-                    MYMAGENTA = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set MAGENTA");
-                    }
-                    break;
-                case 6:
-                    MYCYAN = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set CYAN");
-                    }
-                    break;
-                case 7:
-                    MYWHITE = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set WHITE");
-                    }
-                    break;
-                case 8:
-                    MYBOLD_BLACK = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD BLACK");
-                    }
-                    break;
-                case 9:
-                    MYBOLD_RED = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD RED");
-                    }
-                    break;
-                case 10:
-                    MYBOLD_GREEN = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD GREEN");
-                    }
-                    break;
-                case 11:
-                    MYBOLD_YELLOW = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD YELLOW");
-                    }
-                    break;
-                case 12:
-                    MYBOLD_BLUE = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD BLUE");
-                    }
-                    break;
-                case 13:
-                    MYBOLD_MAGENTA = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD MAGENTA");
-                    }
-                    break;
-                case 14:
-                    MYBOLD_CYAN = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD CYAN");
-                    }
-                    break;
-                case 15:
-                    MYBOLD_WHITE = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set BOLD WHITE");
-                    }
-                    break;
-                case 39:
-                    DEFAULT_FORECOLOR = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set DEFAULT FOREGROUND");
-                    }
-                    break;
-                case 49:
-                    DEFAULT_BACKCOLOR = rgbColor;
-                    if (debugToStderr) {
-                        System.err.println("    Set DEFAULT BACKGROUND");
-                    }
-                    break;
-                default:
-                    break;
-            }
+            setColorFromOsc(color, rgbColor);
 
             // We have changed a system color.  Redraw the entire screen.
             clearPhysical();
             reallyCleared = true;
         } catch (NumberFormatException e) {
+            // SQUASH
+        }
+    }
+
+    /**
+     * Set a palette color from an OSC response.
+     *
+     * @param colorIndex the color index (0-15 for palette, 39 for default foreground, 49 for default background)
+     * @param rgbColor   the RGB color value
+     */
+    private void setColorFromOsc(final int colorIndex, final int rgbColor) {
+        switch (colorIndex) {
+            case 0 -> {
+                MYBLACK = rgbColor;
+                if (debugToStderr) System.err.println("    Set BLACK");
+            }
+            case 1 -> {
+                MYRED = rgbColor;
+                if (debugToStderr) System.err.println("    Set RED");
+            }
+            case 2 -> {
+                MYGREEN = rgbColor;
+                if (debugToStderr) System.err.println("    Set GREEN");
+            }
+            case 3 -> {
+                MYYELLOW = rgbColor;
+                if (debugToStderr) System.err.println("    Set YELLOW");
+            }
+            case 4 -> {
+                MYBLUE = rgbColor;
+                if (debugToStderr) System.err.println("    Set BLUE");
+            }
+            case 5 -> {
+                MYMAGENTA = rgbColor;
+                if (debugToStderr) System.err.println("    Set MAGENTA");
+            }
+            case 6 -> {
+                MYCYAN = rgbColor;
+                if (debugToStderr) System.err.println("    Set CYAN");
+            }
+            case 7 -> {
+                MYWHITE = rgbColor;
+                if (debugToStderr) System.err.println("    Set WHITE");
+            }
+            case 8 -> {
+                MYBOLD_BLACK = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD BLACK");
+            }
+            case 9 -> {
+                MYBOLD_RED = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD RED");
+            }
+            case 10 -> {
+                MYBOLD_GREEN = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD GREEN");
+            }
+            case 11 -> {
+                MYBOLD_YELLOW = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD YELLOW");
+            }
+            case 12 -> {
+                MYBOLD_BLUE = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD BLUE");
+            }
+            case 13 -> {
+                MYBOLD_MAGENTA = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD MAGENTA");
+            }
+            case 14 -> {
+                MYBOLD_CYAN = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD CYAN");
+            }
+            case 15 -> {
+                MYBOLD_WHITE = rgbColor;
+                if (debugToStderr) System.err.println("    Set BOLD WHITE");
+            }
+            case 39 -> {
+                DEFAULT_FORECOLOR = rgbColor;
+                if (debugToStderr) System.err.println("    Set DEFAULT FOREGROUND");
+            }
+            case 49 -> {
+                DEFAULT_BACKCOLOR = rgbColor;
+                if (debugToStderr) System.err.println("    Set DEFAULT BACKGROUND");
+            }
+            default -> {
+                // Unknown color index, ignore
+            }
         }
     }
 
@@ -2932,8 +2821,7 @@ public class ECMA48Terminal extends LogicalScreen
 
             case ESCAPE:
                 // 'P', during the XTVERSION query only, goes to XTVERSION.
-                // What a fucking mess.
-                if ((ch == 'P') && (xtversionQuery == true)) {
+                if ((ch == 'P') && xtversionQuery) {
                     state = ParseState.XTVERSION;
                     xtversionResponse.setLength(0);
                     xtversionQuery = false;
@@ -3209,7 +3097,7 @@ public class ECMA48Terminal extends LogicalScreen
                             return;
                         case 'S':
                             // Report graphics property.
-                            if (decPrivateModeFlag == false) {
+                            if (!decPrivateModeFlag) {
                                 break;
                             }
 
@@ -3229,7 +3117,7 @@ public class ECMA48Terminal extends LogicalScreen
                                             "status %s Ps %s Pv %s\n", params.get(0),
                                         params.get(1), params.get(2));
                                 }
-                                if (params.get(0).equals("1")) {
+                                if (params.getFirst().equals("1")) {
                                     int registers = sixelEncoder.getPaletteSize();
                                     try {
                                         registers = Integer.parseInt(params.get(2));
@@ -3265,7 +3153,7 @@ public class ECMA48Terminal extends LogicalScreen
                             break;
                         case 'c':
                             // Device Attributes
-                            if (decPrivateModeFlag == false) {
+                            if (!decPrivateModeFlag) {
                                 break;
                             }
                             daResponseSeen = true;
@@ -3313,17 +3201,15 @@ public class ECMA48Terminal extends LogicalScreen
                                     reportsJexerImages = true;
                                 }
                             }
-                            if (reportsSixelImages == false) {
-                                // Terminal does not support Sixel images, disable
-                                // them.
+                            if (!reportsSixelImages) {
+                                // Terminal does not support Sixel images, disable them.
                                 sixel = false;
                                 if (debugToStderr) {
                                     System.err.println("Device Attributes: Disable Sixel images");
                                 }
                             }
-                            if (reportsJexerImages == false) {
-                                // Terminal does not support Casciian images, disable
-                                // them.
+                            if (!reportsJexerImages) {
+                                // Terminal does not support Casciian images, disable them.
                                 jexerImageOption = JexerImageOption.DISABLED;
                                 if (debugToStderr) {
                                     System.err.println("Device Attributes: Disable Casciian images");
@@ -3436,15 +3322,13 @@ public class ECMA48Terminal extends LogicalScreen
                             resetParser();
                             return;
                         case 'y':
-                            if ((decPrivateModeFlag == true)
-                                && (decDollarModeFlag == true)
-                            ) {
+                            if (decPrivateModeFlag && decDollarModeFlag) {
                                 if (debugToStderr) {
                                     System.err.println("DECRPM: " + params);
                                 }
                                 // DECRPM response
                                 if (params.size() == 2) {
-                                    String Pd = params.get(0);
+                                    String Pd = params.getFirst();
                                     String Ps = params.get(1);
                                     if (Ps.equals("1")          // Set
                                         || Ps.equals("2")       // Reset
@@ -3708,7 +3592,7 @@ public class ECMA48Terminal extends LogicalScreen
 
         StringBuilder sb = new StringBuilder();
 
-        assert (sixel == true);
+        assert sixel;
 
         // Place the cursor.
         sb.append(sortableGotoXY(x, y));
@@ -3728,10 +3612,10 @@ public class ECMA48Terminal extends LogicalScreen
      * @return the string to emit to an ANSI / ECMA-style terminal
      */
     private String endSixel() {
-        assert (sixel == true);
+        assert sixel;
 
         // ST
-        return ("\033\\");
+        return "\033\\";
     }
 
     /**
@@ -3749,15 +3633,13 @@ public class ECMA48Terminal extends LogicalScreen
         StringBuilder sb = new StringBuilder();
 
         assert (cells != null);
-        assert (cells.size() > 0);
-        assert (cells.get(0).getImage() != null);
+        assert (!cells.isEmpty());
+        assert (cells.getFirst().getImage() != null);
 
-        if (sixel == false) {
+        if (!sixel) {
             sb.append(normal());
             sb.append(gotoXY(x, y));
-            for (int i = 0; i < cells.size(); i++) {
-                sb.append(' ');
-            }
+            sb.append(" ".repeat(cells.size()));
             return sb.toString();
         }
 
@@ -3976,22 +3858,13 @@ public class ECMA48Terminal extends LogicalScreen
             // TODO: Both of these setRGB cases are failing sometimes in the
             // multihead case.  Figure it out.
             return image;
-            /*
-            throw new RuntimeException("image " + tileWidth + "x" +
-                tileHeight + " cells.get(cells.size() - 1).getImage() " +
-                cells.get(cells.size() - 1).getImage(), e);
-             */
         }
 
+        // Fill remaining area with background color if the last cell is narrower
         if (totalWidth < tileWidth) {
-            int backgroundColor = 0;
-            for (int imageX = image.getWidth() - totalWidth;
-                 imageX < image.getWidth(); imageX++) {
-
-                for (int imageY = 0; imageY < tileHeight; imageY++) {
-                    image.setRGB(imageX, imageY, backgroundColor);
-                }
-            }
+            int startX = (cells.size() - 1) * tileWidth + totalWidth;
+            int remainingWidth = tileWidth - totalWidth;
+            image.fillRect(startX, 0, remainingWidth, tileHeight, MYBLACK);
         }
 
         return image;
@@ -4020,15 +3893,13 @@ public class ECMA48Terminal extends LogicalScreen
         StringBuilder sb = new StringBuilder();
 
         assert (cells != null);
-        assert (cells.size() > 0);
-        assert (cells.get(0).getImage() != null);
+        assert (!cells.isEmpty());
+        assert (cells.getFirst().getImage() != null);
 
         if (jexerImageOption == JexerImageOption.DISABLED) {
             sb.append(normal());
             sb.append(sortableGotoXY(x, y));
-            for (int i = 0; i < cells.size(); i++) {
-                sb.append(' ');
-            }
+            sb.append(" ".repeat(cells.size()));
             return sb.toString();
         }
 
@@ -4047,7 +3918,6 @@ public class ECMA48Terminal extends LogicalScreen
         if (saveInCache) {
             String cachedResult = jexerCache.get(cells);
             if (cachedResult != null) {
-                // System.err.println("CACHE HIT");
                 sb.append(sortableGotoXY(x, y));
                 sb.append(cachedResult);
                 return sb.toString();
@@ -4199,45 +4069,31 @@ public class ECMA48Terminal extends LogicalScreen
             return rgb;
         }
 
+        int colorValue = attr.getForeColor().getValue();
         if (attr.isBold()) {
-            if (attr.getForeColor().equals(Color.BLACK)) {
-                return MYBOLD_BLACK;
-            } else if (attr.getForeColor().equals(Color.RED)) {
-                return MYBOLD_RED;
-            } else if (attr.getForeColor().equals(Color.BLUE)) {
-                return MYBOLD_BLUE;
-            } else if (attr.getForeColor().equals(Color.GREEN)) {
-                return MYBOLD_GREEN;
-            } else if (attr.getForeColor().equals(Color.YELLOW)) {
-                return MYBOLD_YELLOW;
-            } else if (attr.getForeColor().equals(Color.CYAN)) {
-                return MYBOLD_CYAN;
-            } else if (attr.getForeColor().equals(Color.MAGENTA)) {
-                return MYBOLD_MAGENTA;
-            } else if (attr.getForeColor().equals(Color.WHITE)) {
-                return MYBOLD_WHITE;
-            }
-        } else {
-            if (attr.getForeColor().equals(Color.BLACK)) {
-                return MYBLACK;
-            } else if (attr.getForeColor().equals(Color.RED)) {
-                return MYRED;
-            } else if (attr.getForeColor().equals(Color.BLUE)) {
-                return MYBLUE;
-            } else if (attr.getForeColor().equals(Color.GREEN)) {
-                return MYGREEN;
-            } else if (attr.getForeColor().equals(Color.YELLOW)) {
-                return MYYELLOW;
-            } else if (attr.getForeColor().equals(Color.CYAN)) {
-                return MYCYAN;
-            } else if (attr.getForeColor().equals(Color.MAGENTA)) {
-                return MYMAGENTA;
-            } else if (attr.getForeColor().equals(Color.WHITE)) {
-                return MYWHITE;
-            }
+            return switch (colorValue) {
+                case 0 -> MYBOLD_BLACK;  // Color.BLACK
+                case 1 -> MYBOLD_RED;    // Color.RED
+                case 2 -> MYBOLD_GREEN;  // Color.GREEN
+                case 3 -> MYBOLD_YELLOW; // Color.YELLOW
+                case 4 -> MYBOLD_BLUE;   // Color.BLUE
+                case 5 -> MYBOLD_MAGENTA;// Color.MAGENTA
+                case 6 -> MYBOLD_CYAN;   // Color.CYAN
+                case 7 -> MYBOLD_WHITE;  // Color.WHITE
+                default -> throw new IllegalArgumentException("Invalid color: " + colorValue);
+            };
         }
-        throw new IllegalArgumentException("Invalid color: " +
-            attr.getForeColor().getValue());
+        return switch (colorValue) {
+            case 0 -> MYBLACK;   // Color.BLACK
+            case 1 -> MYRED;     // Color.RED
+            case 2 -> MYGREEN;   // Color.GREEN
+            case 3 -> MYYELLOW;  // Color.YELLOW
+            case 4 -> MYBLUE;    // Color.BLUE
+            case 5 -> MYMAGENTA; // Color.MAGENTA
+            case 6 -> MYCYAN;    // Color.CYAN
+            case 7 -> MYWHITE;   // Color.WHITE
+            default -> throw new IllegalArgumentException("Invalid color: " + colorValue);
+        };
     }
 
     /**
@@ -4256,25 +4112,17 @@ public class ECMA48Terminal extends LogicalScreen
             return rgb;
         }
 
-        if (attr.getBackColor().equals(Color.BLACK)) {
-            return MYBLACK;
-        } else if (attr.getBackColor().equals(Color.RED)) {
-            return MYRED;
-        } else if (attr.getBackColor().equals(Color.BLUE)) {
-            return MYBLUE;
-        } else if (attr.getBackColor().equals(Color.GREEN)) {
-            return MYGREEN;
-        } else if (attr.getBackColor().equals(Color.YELLOW)) {
-            return MYYELLOW;
-        } else if (attr.getBackColor().equals(Color.CYAN)) {
-            return MYCYAN;
-        } else if (attr.getBackColor().equals(Color.MAGENTA)) {
-            return MYMAGENTA;
-        } else if (attr.getBackColor().equals(Color.WHITE)) {
-            return MYWHITE;
-        }
-        throw new IllegalArgumentException("Invalid color: " +
-            attr.getBackColor().getValue());
+        return switch (attr.getBackColor().getValue()) {
+            case 0 -> MYBLACK;   // Color.BLACK
+            case 1 -> MYRED;     // Color.RED
+            case 2 -> MYGREEN;   // Color.GREEN
+            case 3 -> MYYELLOW;  // Color.YELLOW
+            case 4 -> MYBLUE;    // Color.BLUE
+            case 5 -> MYMAGENTA; // Color.MAGENTA
+            case 6 -> MYCYAN;    // Color.CYAN
+            case 7 -> MYWHITE;   // Color.WHITE
+            default -> throw new IllegalArgumentException("Invalid color: " + attr.getBackColor().getValue());
+        };
     }
 
     /**
@@ -4375,6 +4223,37 @@ public class ECMA48Terminal extends LogicalScreen
     }
 
     /**
+     * Get the palette color for a Color constant.
+     *
+     * @param color the Color constant
+     * @param bold  if true, return the bold/bright variant
+     * @return the RGB palette color value
+     */
+    private static int getPaletteColor(final Color color, final boolean bold) {
+        return bold ? switch (color.getValue()) {
+            case 0 -> MYBOLD_BLACK;
+            case 1 -> MYBOLD_RED;
+            case 2 -> MYBOLD_GREEN;
+            case 3 -> MYBOLD_YELLOW;
+            case 4 -> MYBOLD_BLUE;
+            case 5 -> MYBOLD_MAGENTA;
+            case 6 -> MYBOLD_CYAN;
+            case 7 -> MYBOLD_WHITE;
+            default -> MYBOLD_WHITE;
+        } : switch (color.getValue()) {
+            case 0 -> MYBLACK;
+            case 1 -> MYRED;
+            case 2 -> MYGREEN;
+            case 3 -> MYYELLOW;
+            case 4 -> MYBLUE;
+            case 5 -> MYMAGENTA;
+            case 6 -> MYCYAN;
+            case 7 -> MYWHITE;
+            default -> MYWHITE;
+        };
+    }
+
+    /**
      * Create a T.416 RGB parameter sequence for a single color change.
      *
      * @param bold       if true, set bold
@@ -4385,53 +4264,17 @@ public class ECMA48Terminal extends LogicalScreen
      */
     private String rgbColor(final boolean bold, final Color color,
                             final boolean foreground) {
-        if (doRgbColor == false) {
+        if (!doRgbColor) {
             return "";
         }
         StringBuilder sb = new StringBuilder("\033[");
         if (bold) {
             // Bold implies foreground only
             sb.append("38;2;");
-            if (color.equals(Color.BLACK)) {
-                sb.append(systemColorRGB(MYBOLD_BLACK));
-            } else if (color.equals(Color.RED)) {
-                sb.append(systemColorRGB(MYBOLD_RED));
-            } else if (color.equals(Color.GREEN)) {
-                sb.append(systemColorRGB(MYBOLD_GREEN));
-            } else if (color.equals(Color.YELLOW)) {
-                sb.append(systemColorRGB(MYBOLD_YELLOW));
-            } else if (color.equals(Color.BLUE)) {
-                sb.append(systemColorRGB(MYBOLD_BLUE));
-            } else if (color.equals(Color.MAGENTA)) {
-                sb.append(systemColorRGB(MYBOLD_MAGENTA));
-            } else if (color.equals(Color.CYAN)) {
-                sb.append(systemColorRGB(MYBOLD_CYAN));
-            } else if (color.equals(Color.WHITE)) {
-                sb.append(systemColorRGB(MYBOLD_WHITE));
-            }
+            sb.append(systemColorRGB(getPaletteColor(color, true)));
         } else {
-            if (foreground) {
-                sb.append("38;2;");
-            } else {
-                sb.append("48;2;");
-            }
-            if (color.equals(Color.BLACK)) {
-                sb.append(systemColorRGB(MYBLACK));
-            } else if (color.equals(Color.RED)) {
-                sb.append(systemColorRGB(MYRED));
-            } else if (color.equals(Color.GREEN)) {
-                sb.append(systemColorRGB(MYGREEN));
-            } else if (color.equals(Color.YELLOW)) {
-                sb.append(systemColorRGB(MYYELLOW));
-            } else if (color.equals(Color.BLUE)) {
-                sb.append(systemColorRGB(MYBLUE));
-            } else if (color.equals(Color.MAGENTA)) {
-                sb.append(systemColorRGB(MYMAGENTA));
-            } else if (color.equals(Color.CYAN)) {
-                sb.append(systemColorRGB(MYCYAN));
-            } else if (color.equals(Color.WHITE)) {
-                sb.append(systemColorRGB(MYWHITE));
-            }
+            sb.append(foreground ? "38;2;" : "48;2;");
+            sb.append(systemColorRGB(getPaletteColor(color, false)));
         }
         sb.append("m");
         return sb.toString();
@@ -4449,7 +4292,7 @@ public class ECMA48Terminal extends LogicalScreen
      */
     private String rgbColor(final boolean bold, final Color foreColor,
                             final Color backColor) {
-        if (doRgbColor == false) {
+        if (!doRgbColor) {
             return "";
         }
 
@@ -4558,6 +4401,27 @@ public class ECMA48Terminal extends LogicalScreen
     }
 
     /**
+     * Build the SGR attribute prefix string based on reverse, blink, and underline flags.
+     * The returned string includes the ESC[ and ends with either 'm' (if terminated)
+     * or a trailing separator for additional parameters.
+     *
+     * @param reverse    if true, include reverse attribute (7)
+     * @param blink      if true, include blink attribute (5)
+     * @param underline  if true, include underline attribute (4)
+     * @param terminated if true, end with 'm'; otherwise end with ';' for more params
+     * @return the SGR prefix string
+     */
+    private static String buildAttributePrefix(final boolean reverse, final boolean blink,
+                                               final boolean underline, final boolean terminated) {
+        StringBuilder sb = new StringBuilder("\033[0");
+        if (reverse) sb.append(";7");
+        if (blink) sb.append(";5");
+        if (underline) sb.append(";4");
+        sb.append(terminated ? "m" : ";");
+        return sb.toString();
+    }
+
+    /**
      * Create a SGR parameter sequence for foreground, background, and
      * several attributes.  This sequence first resets all attributes to
      * default, then sets attributes as per the parameters.
@@ -4579,35 +4443,12 @@ public class ECMA48Terminal extends LogicalScreen
                          final boolean bold, final boolean reverse, final boolean blink,
                          final boolean underline) {
 
-        int ecmaForeColor = foreColor.getValue();
-        int ecmaBackColor = backColor.getValue();
+        int ecmaForeColor = foreColor.getValue() + 30;
+        int ecmaBackColor = backColor.getValue() + 40;
 
-        // Convert Color.* values to SGR numerics
-        ecmaBackColor += 40;
-        ecmaForeColor += 30;
-
-        StringBuilder sb = new StringBuilder();
-        if (reverse && blink && !underline) {
-            sb.append("\033[0;7;5;");
-        } else if (reverse && !blink && !underline) {
-            sb.append("\033[0;7;");
-        } else if (!reverse && blink && !underline) {
-            sb.append("\033[0;5;");
-        } else if (reverse && blink && underline) {
-            sb.append("\033[0;7;5;4;");
-        } else if (reverse && !blink && underline) {
-            sb.append("\033[0;7;4;");
-        } else if (!reverse && blink && underline) {
-            sb.append("\033[0;5;4;");
-        } else if (!reverse && !blink && underline) {
-            sb.append("\033[0;4;");
-        } else {
-            assert (!reverse && !blink && !underline);
-            sb.append("\033[0;");
-        }
-        sb.append(String.format("%d;%dm", ecmaForeColor, ecmaBackColor));
-        sb.append(rgbColor(bold, foreColor, backColor));
-        return sb.toString();
+        return buildAttributePrefix(reverse, blink, underline, false)
+            + String.format("%d;%dm", ecmaForeColor, ecmaBackColor)
+            + rgbColor(bold, foreColor, backColor);
     }
 
     /**
@@ -4628,27 +4469,7 @@ public class ECMA48Terminal extends LogicalScreen
      */
     private String attributes(final boolean bold, final boolean reverse,
                               final boolean blink, final boolean underline) {
-
-        StringBuilder sb = new StringBuilder();
-        if (reverse && blink && !underline) {
-            sb.append("\033[0;7;5m");
-        } else if (reverse && !blink && !underline) {
-            sb.append("\033[0;7m");
-        } else if (!reverse && blink && !underline) {
-            sb.append("\033[0;5m");
-        } else if (reverse && blink && underline) {
-            sb.append("\033[0;7;5;4m");
-        } else if (reverse && !blink && underline) {
-            sb.append("\033[0;7;4m");
-        } else if (!reverse && blink && underline) {
-            sb.append("\033[0;5;4m");
-        } else if (!reverse && !blink && underline) {
-            sb.append("\033[0;4m");
-        } else {
-            assert (!reverse && !blink && !underline);
-            sb.append("\033[0m");
-        }
-        return sb.toString();
+        return buildAttributePrefix(reverse, blink, underline, true);
     }
 
     /**
@@ -4680,34 +4501,10 @@ public class ECMA48Terminal extends LogicalScreen
         int backColorGreen = (backColorRGB >>> 8) & 0xFF;
         int backColorBlue = backColorRGB & 0xFF;
 
-        StringBuilder sb = new StringBuilder();
-        if (reverse && blink && !underline) {
-            sb.append("\033[0;7;5;");
-        } else if (reverse && !blink && !underline) {
-            sb.append("\033[0;7;");
-        } else if (!reverse && blink && !underline) {
-            sb.append("\033[0;5;");
-        } else if (reverse && blink && underline) {
-            sb.append("\033[0;7;5;4;");
-        } else if (reverse && !blink && underline) {
-            sb.append("\033[0;7;4;");
-        } else if (!reverse && blink && underline) {
-            sb.append("\033[0;5;4;");
-        } else if (!reverse && !blink && underline) {
-            sb.append("\033[0;4;");
-        } else {
-            assert (!reverse && !blink && !underline);
-            sb.append("\033[0;");
-        }
-
-        sb.append("m\033[38;2;");
-        sb.append(String.format("%d;%d;%d", foreColorRed, foreColorGreen,
-            foreColorBlue));
-        sb.append("m\033[48;2;");
-        sb.append(String.format("%d;%d;%d", backColorRed, backColorGreen,
-            backColorBlue));
-        sb.append("m");
-        return sb.toString();
+        return buildAttributePrefix(reverse, blink, underline, false)
+            + String.format("m\033[38;2;%d;%d;%dm\033[48;2;%d;%d;%dm",
+                foreColorRed, foreColorGreen, foreColorBlue,
+                backColorRed, backColorGreen, backColorBlue);
     }
 
     /**
